--- a/WPFPyFrameWork/WPFPyFrameWork/WPFPyFrameWork.xaml
+++ b/WPFPyFrameWork/WPFPyFrameWork/WPFPyFrameWork.xaml
@@ -1,13 +1,22 @@
 ﻿<Window 
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-       Title="WPFPyFrameWork" Height="300" Width="300">
-    <Grid>
+       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="MainWindow" 
+       Title="WPF">
+    <Grid Margin="1,0,-0.4,0.6">
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="45,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="33" Width="214" Text="{Binding textBlock, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"><Run Text="Original"/></TextBlock>
-        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Height="27" Margin="69,204,0,0" VerticalAlignment="Top" Width="115"/>
-        <Button x:Name="button" Content="Button-1" HorizontalAlignment="Left" Margin="45,123,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button1" Content="Button-2" HorizontalAlignment="Left" Margin="184,142,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="160,203,0,0" TextWrapping="Wrap" Text="{Binding textBox, FallbackValue=Original, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="button2" Content="Display" Margin="10,169,208.6,71.4" RenderTransformOrigin="0.848,1.874"/>
+        <Label x:Name="label" Content="{Binding label, FallbackValue=Original, Mode=OneWay}" HorizontalAlignment="Left" Height="207" Margin="240,273,0,0" VerticalAlignment="Top" Width="249"/>
+        <Button x:Name="button" Content="Button-1" HorizontalAlignment="Left" Margin="205,93,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button1" Content="Button-2" HorizontalAlignment="Left" Margin="414,93,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="297,139,0,0" TextWrapping="Wrap" Text="{Binding textBox, FallbackValue=Original, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="button2" Content="Display" Margin="154,194,0,0" RenderTransformOrigin="0.5,0.5" Height="48" VerticalAlignment="Top" HorizontalAlignment="Left" Width="128">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.201"/>
+                    <TranslateTransform X="136.873" Y="0.61156"/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
     </Grid>
 </Window> 
