--- a/WPFPyFrameWork/WPFPyFrameWork/WPFPyFrameWork.xaml
+++ b/WPFPyFrameWork/WPFPyFrameWork/WPFPyFrameWork.xaml
@@ -4,9 +4,9 @@
        Title="WPF">
     <Grid Margin="1,0,-0.4,0.6">
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="45,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="33" Width="214" Text="{Binding textBlock, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"><Run Text="Original"/></TextBlock>
-        <Label x:Name="label" Content="{Binding label, FallbackValue=Original, Mode=OneWay}" HorizontalAlignment="Left" Height="207" Margin="240,273,0,0" VerticalAlignment="Top" Width="249"/>
+        <Label x:Name="label" Content="{Binding label, FallbackValue=Original, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="207" Margin="240,273,0,0" VerticalAlignment="Top" Width="249"/>
         <Button x:Name="button" Content="Button-1" HorizontalAlignment="Left" Margin="205,93,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button1" Content="Button-2" HorizontalAlignment="Left" Margin="414,93,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button1" Content="Button-2" HorizontalAlignment="Left" Margin="414,93,0,0" VerticalAlignment="Top" Width="75" />
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="297,139,0,0" TextWrapping="Wrap" Text="{Binding textBox, FallbackValue=Original, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="button2" Content="Display" Margin="154,194,0,0" RenderTransformOrigin="0.5,0.5" Height="48" VerticalAlignment="Top" HorizontalAlignment="Left" Width="128">
             <Button.RenderTransform>
